<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".isApp.dongwook.DongWookActivity">

    <TextView
        android:id="@+id/DongWookActivity_TitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/dongWook_title"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dongWookActivity_loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/dongWook_btn_login"
        android:backgroundTint="#e9e49e"
        app:layout_constraintTop_toBottomOf="@+id/DongWookActivity_TitleTextView"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/dongWookActivity_signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/dongWook_btn_signup"
        android:backgroundTint="#e9e49e"
        app:layout_constraintTop_toBottomOf="@+id/dongWookActivity_loginButton"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/dongWookActivity_logoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/dongWook_btn_logout"
        android:backgroundTint="#e9e49e"
        app:layout_constraintTop_toBottomOf="@+id/dongWookActivity_signUpButton"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/dongWookActivity_customerConsultingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/customer_consulting_main"
        android:backgroundTint="#e9e49e"
        app:layout_constraintTop_toBottomOf="@+id/dongWookActivity_logoutButton"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/dongWookActivity_adminConsultingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/admin_consulting_main"
        android:backgroundTint="#e9e49e"
        app:layout_constraintTop_toBottomOf="@+id/dongWookActivity_customerConsultingButton"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/dongWookActivity_customerCompensation_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/customer_Compensation"
        android:backgroundTint="#e9e49e"
        app:layout_constraintTop_toBottomOf="@+id/dongWookActivity_adminConsultingButton"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/dongWookActivity_salesCompensation_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/sales_Compensation"
        android:backgroundTint="#e9e49e"
        app:layout_constraintTop_toBottomOf="@+id/dongWookActivity_customerCompensation_Button"
        tools:layout_editor_absoluteX="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>