<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/signupActivity_logoImage"
        android:layout_width="126dp"
        android:layout_height="129dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/dogfoot_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signupActivity_idText"
        android:layout_width="299dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/textview_border"
        android:hint="@string/register_email_maintext"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupActivity_logoImage" />

    <EditText
        android:id="@+id/signupActivity_pwText"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/textview_border"
        android:hint="@string/register_password_maintext"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupActivity_idText" />
    <EditText
        android:id="@+id/signupActivity_nameText"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/textview_border"
        android:hint="@string/register_name_maintext"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupActivity_pwText" />
    <EditText
        android:id="@+id/signupActivity_phoneText"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/textview_border"
        android:hint="@string/register_phone_maintext"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupActivity_nameText" />
    <EditText
        android:id="@+id/signupActivity_addressText"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/textview_border"
        android:hint="@string/register_address_maintext"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupActivity_phoneText" />
    <EditText
        android:id="@+id/signupActivity_residentText"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/textview_border"
        android:hint="@string/register_resident_maintext"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupActivity_addressText" />

    <Button
        android:id="@+id/signupActivity_signupButton"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#DDDDDD"
        android:text="@string/singup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupActivity_residentText" />





</androidx.constraintlayout.widget.ConstraintLayout>