<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".isApp.dongwook.domain.customerConsulting.view.CustomerConsultingMainFragment">

    <TextView
        android:id="@+id/customerConsultingMainFragment_TitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/customer_consulting_main"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/customerConsultingMainFragment_inputButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/customer_consulting_input"
        android:background="@drawable/custom_border"
        app:layout_constraintTop_toBottomOf="@+id/customerConsultingMainFragment_TitleTextView"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/customerConsultingMainFragment_listButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/customer_consulting_list"
        android:background="@drawable/custom_border"
        app:layout_constraintTop_toBottomOf="@+id/customerConsultingMainFragment_inputButton"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/customerConsultingMainFragment_resultButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/customer_consulting_result"
        android:background="@drawable/custom_border"
        app:layout_constraintTop_toBottomOf="@+id/customerConsultingMainFragment_listButton"
        tools:layout_editor_absoluteX="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>