<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/loginActivity_logoImage"
        android:layout_width="126dp"
        android:layout_height="129dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/dogfoot_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginActivity_idText"
        android:layout_width="299dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/textview_border"
        android:hint="@string/id_hint"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginActivity_logoImage" />

    <EditText
        android:id="@+id/loginActivity_pwText"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/textview_border"
        android:hint="@string/pw_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginActivity_idText" />

    <Button
        android:id="@+id/loginActivity_loginButton"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_border"
        android:text="@string/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginActivity_pwText" />

    <TextView
        android:id="@+id/loginActivity_areYouNewMessageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="아직 회원이 아니신가요? "
        android:layout_marginTop="16dp"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@+id/loginActivity_registerTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginActivity_loginButton" />

    <TextView
        android:id="@+id/loginActivity_registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="회원가입"
        android:textColor="#E53154"
        android:layout_marginTop="16dp"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/loginActivity_areYouNewMessageTextView"
        app:layout_constraintTop_toBottomOf="@+id/loginActivity_loginButton" />





</androidx.constraintlayout.widget.ConstraintLayout>